# Python-MCP-Server

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  EXTENDING.md  README.md  TROUBLESHOOTING.md  claude_desktop_config.json.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py
app/config/: settings.py
app/core/: exceptions.py  logging_config.py
app/middleware/: auth.py
app/models/: database.py
app/prompts/: implementations.py
app/resources/: implementations.py
app/schemas/: prompts.py  resources.py  tools.py
app/services/: cache.py  external_apis.py
app/tools/: implementations.py
app/utils/: formatters.py  helpers.py
docker/: nginx.conf
kubernetes/: deployment.yaml
scripts/: deploy-railway.sh  deploy-render.sh  docker-build.sh  format.sh  health-check.sh  lint.sh  manage_db.py  run-tests.sh  setup.sh  start-dev.sh
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_schemas.py  test_tools.py
