[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mcp-server"
version = "1.0.0"
description = "Production-ready Python MCP (Model Context Protocol) server"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "model", "context", "protocol", "fastapi", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "ipython>=8.18.0",
]

db = [
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-mcp-server"
Documentation = "https://github.com/yourusername/python-mcp-server/wiki"
Repository = "https://github.com/yourusername/python-mcp-server.git"
Issues = "https://github.com/yourusername/python-mcp-server/issues"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
py_version = 312

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
